crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badVariants3.usda
version https://git-lfs.github.com/spec/v1
oid sha256:79b9e42e5a8fc00f050ed2cb9e6c38690681f1c7b160ac20db2dbc67a062c3ce
size 333
